fix: rename folders to English and update links to fix Vercel 500 error

--- a/index.html
+++ b/index.html
@@ -817,7 +817,7 @@
             </a>
             <div class="nav-links">
                 <a href="#components" class="nav-link">组件</a>
-                <a href="00-设计系统/index.html" class="nav-link">设计规范</a>
+                <a href="00-design-system/index.html" class="nav-link">设计规范</a>
                 <a href="#quickstart" class="nav-link">快速开始</a>
                 <a href="https://github.com/mm1025048717-hash/chart-spec" target="_blank" class="nav-link" style="display: flex; align-items: center; gap: 4px;">
                     <svg height="16" width="16" viewBox="0 0 16 16" fill="currentColor" style="opacity: 0.8;">
@@ -894,7 +894,7 @@
                     </div>
                 </div>
                 <div class="chart-grid">
-                    <a href="X轴文本测试/index.html" class="chart-card featured">
+                    <a href="x-axis-test/index.html" class="chart-card featured">
                         <div class="chart-card-preview">
                             <span class="icon">📊</span>
                             <span class="featured-badge">推荐</span>
@@ -904,7 +904,7 @@
                                 X轴文字智能处理
                                 <span class="arrow">→</span>
                             </div>
-                            <div class="chart-card-subtitle">根据文字长度和数据量自动优化显示策略</div>
+                            <div class="chart-card-subtitle">根据文字长度 and 数据量自动优化显示策略</div>
                         </div>
                     </a>
                 </div>
@@ -956,7 +956,7 @@
                             <div class="chart-card-subtitle">Line Chart</div>
                         </div>
                     </a>
-                    <a href="05-面积图/index.html" class="chart-card">
+                    <a href="05-area/index.html" class="chart-card">
                         <div class="chart-card-preview">
                             <span class="icon">📉</span>
                         </div>
@@ -987,7 +987,7 @@
                             <div class="chart-card-subtitle">Pie Chart</div>
                         </div>
                     </a>
-                    <a href="11-漏斗图/index.html" class="chart-card">
+                    <a href="11-funnel/index.html" class="chart-card">
                         <div class="chart-card-preview">
                             <span class="icon">🔻</span>
                         </div>
@@ -996,7 +996,7 @@
                             <div class="chart-card-subtitle">Funnel Chart</div>
                         </div>
                     </a>
-                    <a href="14-矩形树图/index.html" class="chart-card">
+                    <a href="14-treemap/index.html" class="chart-card">
                         <div class="chart-card-preview">
                             <span class="icon">🔲</span>
                         </div>
@@ -1014,11 +1014,11 @@
                     <div class="category-icon gradient-emerald">📐</div>
                     <div class="category-info">
                         <h3>统计分布</h3>
-                        <p>展示数据分布特征和相关性</p>
+                        <p>展示数据分布特征 and 相关性</p>
                     </div>
                 </div>
                 <div class="chart-grid">
-                    <a href="07-直方图/index.html" class="chart-card">
+                    <a href="07-histogram/index.html" class="chart-card">
                         <div class="chart-card-preview">
                             <span class="icon">📊</span>
                         </div>
@@ -1027,7 +1027,7 @@
                             <div class="chart-card-subtitle">Histogram</div>
                         </div>
                     </a>
-                    <a href="08-散点图/index.html" class="chart-card">
+                    <a href="08-scatter/index.html" class="chart-card">
                         <div class="chart-card-preview">
                             <span class="icon">⚫</span>
                         </div>
@@ -1036,7 +1036,7 @@
                             <div class="chart-card-subtitle">Scatter Chart</div>
                         </div>
                     </a>
-                    <a href="09-气泡图/index.html" class="chart-card">
+                    <a href="09-bubble/index.html" class="chart-card">
                         <div class="chart-card-preview">
                             <span class="icon">🫧</span>
                         </div>
@@ -1045,7 +1045,7 @@
                             <div class="chart-card-subtitle">Bubble Chart</div>
                         </div>
                     </a>
-                    <a href="16-热力图/index.html" class="chart-card">
+                    <a href="16-heatmap/index.html" class="chart-card">
                         <div class="chart-card-preview">
                             <span class="icon">🔥</span>
                         </div>
@@ -1063,11 +1063,11 @@
                     <div class="category-icon gradient-rose">📡</div>
                     <div class="category-info">
                         <h3>分析图表</h3>
-                        <p>多维度分析和对比展示</p>
+                        <p>多维度分析 and 对比展示</p>
                     </div>
                 </div>
                 <div class="chart-grid">
-                    <a href="10-雷达图/index.html" class="chart-card">
+                    <a href="10-radar/index.html" class="chart-card">
                         <div class="chart-card-preview">
                             <span class="icon">🕸️</span>
                         </div>
@@ -1076,7 +1076,7 @@
                             <div class="chart-card-subtitle">Radar Chart</div>
                         </div>
                     </a>
-                    <a href="13-帕累托图/index.html" class="chart-card">
+                    <a href="13-pareto/index.html" class="chart-card">
                         <div class="chart-card-preview">
                             <span class="icon">📊</span>
                         </div>
@@ -1098,7 +1098,7 @@
                     </div>
                 </div>
                 <div class="chart-grid">
-                    <a href="12-仪表盘/index.html" class="chart-card">
+                    <a href="12-gauge/index.html" class="chart-card">
                         <div class="chart-card-preview">
                             <span class="icon">⏱️</span>
                         </div>
@@ -1107,7 +1107,7 @@
                             <div class="chart-card-subtitle">Gauge</div>
                         </div>
                     </a>
-                    <a href="19-指标卡/index.html" class="chart-card">
+                    <a href="19-indicator/index.html" class="chart-card">
                         <div class="chart-card-preview">
                             <span class="icon">🎯</span>
                         </div>
@@ -1116,7 +1116,7 @@
                             <div class="chart-card-subtitle">Indicator Card</div>
                         </div>
                     </a>
-                    <a href="15-词云图/index.html" class="chart-card">
+                    <a href="15-wordcloud/index.html" class="chart-card">
                         <div class="chart-card-preview">
                             <span class="icon">☁️</span>
                         </div>
@@ -1125,7 +1125,7 @@
                             <div class="chart-card-subtitle">Word Cloud</div>
                         </div>
                     </a>
-                    <a href="17-地图/index.html" class="chart-card">
+                    <a href="17-map/index.html" class="chart-card">
                         <div class="chart-card-preview">
                             <span class="icon">🗺️</span>
                         </div>
@@ -1134,7 +1134,7 @@
                             <div class="chart-card-subtitle">Map</div>
                         </div>
                     </a>
-                    <a href="18-表格/index.html" class="chart-card">
+                    <a href="18-table/index.html" class="chart-card">
                         <div class="chart-card-preview">
                             <span class="icon">📋</span>
                         </div>
@@ -1151,7 +1151,7 @@
     <!-- Design System -->
     <section class="design-system">
         <div class="design-system-inner">
-            <a href="00-设计系统/index.html" class="design-system-card">
+            <a href="00-design-system/index.html" class="design-system-card">
                 <div class="design-system-icon">📐</div>
                 <div class="design-system-content">
                     <h3>设计规范文档</h3>
@@ -1211,7 +1211,7 @@ npm install @ant-design/charts
         <p class="footer-text">专业的图表设计规范，基于 Ant Design Chart</p>
         <div class="footer-links">
             <a href="#components" class="footer-link">组件</a>
-            <a href="00-设计系统/index.html" class="footer-link">设计规范</a>
+            <a href="00-design-system/index.html" class="footer-link">设计规范</a>
             <a href="#quickstart" class="footer-link">快速开始</a>
         </div>
         <div class="footer-copyright">
