feat: add beautiful sidebar navigation to all chart detail pages

--- a/x-axis-test/index.html
+++ b/x-axis-test/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>X轴文字智能处理 - Chart Spec</title>
+    <link rel="stylesheet" href="../common.css">
     <style>
         :root {
             --apple-blue: #0071E3;
@@ -194,5 +195,6 @@
             </a>
         </div>
     </div>
+    <script src="../nav.js"></script>
 </body>
 </html>
